--- a/package.json
+++ b/package.json
@@ -1,57 +1,58 @@
 {
-  "name": "sentiment",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
-    "formik": "^2.2.9",
-    "framer-motion": "^6.2.8",
-    "moment": "^2.29.3",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.2.0",
-    "react-cookie": "^4.1.1",
-    "react-dom": "^17.0.2",
-    "react-paginate": "^8.1.3",
-    "react-redux": "^8.0.2",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^5.2.1",
-    "react-scripts": "5.0.0",
-    "react-toastify": "^9.0.4",
-    "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1",
-    "uuid": "^8.3.2",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@iconify/react": "^3.1.4"
-  }
+    "homepage": "",
+    "name": "sentiment",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.16.2",
+        "@testing-library/react": "^12.1.3",
+        "@testing-library/user-event": "^13.5.0",
+        "axios": "^0.27.2",
+        "bootstrap": "^5.1.3",
+        "formik": "^2.2.9",
+        "framer-motion": "^6.2.8",
+        "moment": "^2.29.3",
+        "react": "^17.0.2",
+        "react-bootstrap": "^2.2.0",
+        "react-cookie": "^4.1.1",
+        "react-dom": "^17.0.2",
+        "react-paginate": "^8.1.3",
+        "react-redux": "^8.0.2",
+        "react-router": "^5.2.1",
+        "react-router-dom": "^5.2.1",
+        "react-scripts": "5.0.0",
+        "react-toastify": "^9.0.4",
+        "redux": "^4.2.0",
+        "redux-thunk": "^2.4.1",
+        "uuid": "^8.3.2",
+        "web-vitals": "^2.1.4",
+        "yup": "^0.32.11"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@iconify/react": "^3.1.4"
+    }
 }
